--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.2",
     "reselect": "^3.0.1",
+    "serve": "^11.0.2",
     "todomvc-app-css": "^2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test --env=node"
